@@ -1,3 +1,5 @@
+2005/12/18 -- released version 20051218_trunk
+
 2005/12/17 -- released version 20051217_trunk
 
 2005/12/16 -- released version 20051216_trunk
